# combanatorial

./: 1_1.cpp  1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp  1_6_3.cpp  2_1.cpp  5_3.cpp  CMakeLists.txt
combinatorial/: combination.h  permutation.h  variation.h
